# cpp_lab_2025

./: .gitignore  CMakeLists.txt
src/: concept-demo.cpp  imgui-example.cpp
src/cpp_language/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/cuda/src/: hello_world.cu  sum_vector.cu
src/demo/: CMakeLists.txt
src/demo/src/: array_size.cpp  concepts_example_1.cpp  cuda_execution_model.cpp  default_constructor.cpp  first_program.cpp  gpu_model.cpp  graph_dfs.cpp  imgui-example.cpp  inheritance_1.cpp  reference_demo.cpp
src/demo/src/include/: gpu_model.h
src/editor/: CMakeLists.txt  editor.c
src/imgui/: CMakeLists.txt
src/sfml_lab/: CMakeLists.txt  sfml_example_1.cpp  sfml_example_2_window_and_keypress.cpp  sfml_example_3_shapes.cpp  sfml_example_4_sprites.cpp  sfml_example_5_drag_shape.cpp
